<resources>
    <string name="app_name">fillMeApp</string>
    <string name="my_button">My Button</string>
    <string name="cambiar_color">Cambiar color</string>
    <string name="i_am_username">I am UserName</string>
    <string name="i_am_userage">I am UserAge</string>
    <string name="my_button_1">my button 1</string>
    <string name="i_am_usercity">I am UserCity</string>
    <string name="i_am_an_editable_text">I am an editable text</string>
    <string name="i_am_an_e_text" />
    <string name="change_activity">Change_Activity</string>
    <string name="spinner_title" />
    <string name="spinner_title2">Select text color</string>
    <string name="enter_text">Enter text</string>
    <string name="Enter_Text" />
    <string name="select_color" />
    <string name="i_want_my_joke">I want my joke!</string>
    <string name="change_spinner_color">Change spinner color</string>
    <string name="android_team">Android Team</string>
    <string name="pmos_android_team_members">PMOS Android_Team Members</string>
    <string name="team_members">Team Members</string>
    <string name="ios_team_members">iOS Team Members</string>
    <string name="movie_title">Movie Title</string>
    <string name="movie_year">Movie Year</string>
    <string name="get_a_movie_card">Get a movie card</string>
    <string-array name="spinner_array">
        <item>Black</item>
        <item>Blue</item>
        <item>Purple</item>
    </string-array>
    <string name="title_activity_main_compose">MainComposeActivity</string>
    <string name="launch_full_compose">Launch Full Compose</string>
    <string name="launch_partial_compose">Launch Partial Compose</string>
</resources>